<resources>
    <string name="app_name">BFT Local</string>
    <string name="title_activity_maps">dh-bftdemo-android</string>
    <string name="select_navisens">Navisens</string>
    <string name="select_trx">TRX</string>
    <string name="toggle_recordon">Recording</string>
    <string name="toggle_recordoff">Record</string>
    <string name="NAVISENS">navisens</string>
    <string name="TRX">trx</string>
    <string name="trxsetup">TRX Pairing</string>
    <string name="trxinit">TRX manual Check in</string>
    <string name="navinit">NAVISENS Manual init</string>
    <string name="kws_caption">To start demonstration say \"oh mighty computer\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
    <string name="phone_caption">To try phonetic recognition say anything.</string>
    <string name="title_activity_testme">Map</string>
    <string name="generalsetup">Tracking Server</string>
    <string name="title_activity_login">DHBFT - Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Start!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="preference_file_key">mybft.xml</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="callsign">Callsign</string>
    <string name="logsloc">Logs Location</string>
    <string name="mqhost">MQ Host</string>
    <string name="mqport">MQ Port</string>
    <string name="mqTopic">MQ Topic</string>
    <string name="mqUser">MQ User</string>
    <string name="mqPassword">MQ Password</string>
    <string name="Deck7offset">Deck 7 Offset</string>
    <string name="Deck6offset">Deck 6 Offset</string>
    <string name="Deck5offset">Deck 5 Offset</string>
    <string name="Deck4offset">Deck 4 Offset</string>
    <string name="Deck3offset">Deck 3 Offset</string>
    <string name="Deck2offset">Deck 2 Offset</string>
    <string name="DeckTweenoffset">Tween Deck Offset</string>
    <string name="DeckMainoffset">Main Deck Offset</string>
    <string name="Deck2ndoffset">2nd Deck Offset</string>
    <string name="Deck3rdoffset">3rd Deck Offset</string>
    <string name="DeckPlatformoffset">Platform Deck Offset</string>
    <string name="realheight">Real height</string>
    <string name="mapheight">Map height</string>

    <string name="estimoteId">Estimote App ID</string>
    <string name="estimoteToken">Estimote App Token</string>
    <string name="estimoteDist">Estimote Proximity activation distance (m))</string>


</resources>
